<resources>
    <string name="app_name">G702_SN</string>
    <string name="register_start_snap">Start Snap</string>
    <string name="register_name">Name:</string>
    <string name="register_age">Age:</string>
    <string name="register_number">NO:</string>
    <string name="register_id">ID:</string>
    <string name="register_type">Type:</string>
    <string name="register_sex">Sex:</string>
    <string name="register_add_template">Add Template</string>
    <string name="register_back">Back</string>
    <string name="register_face_snap">Register Snap Face</string>
    <string name="register_device_setting">Setting</string>

    <string-array name="user_type">
        <item>Unknown</item>
        <item>Blacklist</item>
        <item>Whitelist</item>
        <item>Customer</item>
        <item>Owner</item>
        <item>Visitor</item>
    </string-array>

    <string-array name="user_sex">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="user_time">
        <item>90 Day</item>
        <item>60 Day</item>
        <item>30 Day</item>
    </string-array>

    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>
